# fastmile-api

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/superpowers/plans/: 2026-05-15-fastmile-api.md  2026-05-16-fastmile-api-pypi-docker.md
docs/superpowers/specs/: 2026-05-15-fastmile-api-design.md
src/fastmile_api/: __init__.py  btsearch.py  cache.py  config.py  main.py  metrics.py  models.py  router_client.py  scraper.py  service.py
src/fastmile_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_api.py  test_btsearch.py  test_cache.py  test_metrics.py  test_radio_enrichment.py  test_router_failure.py  test_scraper.py
